Atualização de arquivos locais