@@ -47,7 +47,7 @@ public class CommandManager {
         this.bukkitCommandManager.registerSuggestion(SuggestionKey.of("prizes"), (sender, context) -> {
             List<String> numbers = new ArrayList<>();
 
-            this.plugin.getCrateManager().getCrateFromName(context.getArgs().get(0)).getPrizes().forEach(prize -> numbers.add(prize.getPrizeNumber()));
+            this.plugin.getCrateManager().getCrateFromName(context.getArgs().getFirst()).getPrizes().forEach(prize -> numbers.add(prize.getPrizeNumber()));
 
             return numbers;
         });
@@ -55,7 +55,7 @@ public class CommandManager {
         this.bukkitCommandManager.registerSuggestion(SuggestionKey.of("tiers"), (sender, context) -> {
             List<String> numbers = new ArrayList<>();
 
-            this.plugin.getCrateManager().getCrateFromName(context.getArgs().get(0)).getTiers().forEach(tier -> numbers.add(tier.getName()));
+            this.plugin.getCrateManager().getCrateFromName(context.getArgs().getFirst()).getTiers().forEach(tier -> numbers.add(tier.getName()));
 
             return numbers;
         });
